--- a/foundry.toml
+++ b/foundry.toml
@@ -26,6 +26,6 @@ int_types = "long"
 line_length = 120
 multiline_func_header = "all"
 number_underscore = "thousands"
-quote_style = "double"
+quote_style = "preserve"
 tab_width = 4
 wrap_comments = true
