deploy test, minor refactor

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,5 @@
-PRIVATE_KEY=
+DEPLOYER_PRIVATE_KEY=
+UPGRADER_PRIVATE_KEY=
 
 # Block explorer API keys
 ARBISCAN_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
