config env & toml file

--- a/.env.template
+++ b/.env.template
@@ -2,20 +2,22 @@ DEPLOYER_PRIVATE_KEY=
 UPGRADER_PRIVATE_KEY=
 
 # Block explorer API keys
-ARBISCAN_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
-BSCSCAN_API_KEY="E82UJS91WX2CUTC4STU7EDG3XH95DUZJ79"
-ETHERSCAN_API_KEY="U9T2ZGVN1FYKVZEEGGWMSRNXTQDASG5ZGQ"
-OPTIMISM_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
-POLYGONSCAN_API_KEY="AT11BIHTF252518RG3RWWSDM736UKJ5DRS"
-INFURA_API_KEY="1bc827ec06e44abc8caa417ca3f4427f"
-SNOWTRACE_API_KEY="V9JT6CP7N45NXFC7YPG5VMTUCD5R1SCGEI"
-ARBITRUM_API_KEY="I421JC6Q263V26XDMEVG47V2K4NZEEQGIW"
+ARBISCAN_KEY="I421JC6Q263V26XDMEVG47V2K4NZEEQGIW"
+SNOWTRACE_KEY="V9JT6CP7N45NXFC7YPG5VMTUCD5R1SCGEI"
+BSCSCAN_KEY="E82UJS91WX2CUTC4STU7EDG3XH95DUZJ79"
+ETHERSCAN_KEY="U9T2ZGVN1FYKVZEEGGWMSRNXTQDASG5ZGQ"
+POLYGONSCAN_KEY="AT11BIHTF252518RG3RWWSDM736UKJ5DRS"
 
-# RPC
-AVAX_URL=https://ava-mainnet.public.blastapi.io/ext/bc/C/rpc
-FUJI_URL=https://api.avax-test.network/ext/bc/C/rpc
-BSC_URL=https://bsc-dataseed4.ninicoin.io
-BSCT_URL=https://data-seed-prebsc-1-s1.binance.org:8545
-POLYGON=https://polygon-rpc.com
-MUMBAI=https://polygon-mumbai.gateway.tenderly.co
-GOERLI_URL=https://ethereum-goerli.publicnode.com
+# RPC Endpoints
+## testnet
+RPC_URL_GOERLI=https://ethereum-goerli.publicnode.com
+RPC_URL_TBSC=https://data-seed-prebsc-1-s1.binance.org:8545
+RPC_URL_FUJI=https://api.avax-test.network/ext/bc/C/rpc
+RPC_URL_MUMBAI=https://polygon-mumbai.gateway.tenderly.co
+RPC_URL_TARB=
+## mainnet
+RPC_URL_ETHER=
+RPC_URL_BSC=https://bsc-dataseed4.ninicoin.io
+RPC_URL_AVALANCHE=https://ava-mainnet.public.blastapi.io/ext/bc/C/rpc
+RPC_URL_POLYGON=https://polygon-rpc.com
+RPC_URL_ARBITRUM=
