--- a/.env.debug.template
+++ b/.env.debug.template
@@ -1,10 +1,10 @@
 # Fork block number to debug
-export BLOCK=0x0
+export BLOCK=0
 # Caller
 export FROM=0x0
 # Callee
 export TO=0x0
 # Sent Value
-export VALUE=0x0
+export VALUE=0
 # Call Data
 export CALLDATA=0x0
