--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,5 @@
     "solidity.formatter": "forge",
     "solidity.packageDefaultDependenciesDirectory": "lib",
     "solidity.packageDefaultDependenciesContractsDirectory": "src",
-    "solidity.compileUsingRemoteVersion": "v0.8.20",
-    "cSpell.words": [
-        "solady"
-    ],
+    "solidity.compileUsingRemoteVersion": "v0.8.23+commit.f704f362",
 }
