chore: add debug params

--- a/.env.template
+++ b/.env.template
@@ -20,3 +20,10 @@ export RPC_URL_BSC=https://bsc-dataseed4.ninicoin.io
 export RPC_URL_AVALANCHE=https://ava-mainnet.public.blastapi.io/ext/bc/C/rpc
 export RPC_URL_POLYGON=https://polygon-rpc.com
 # export RPC_URL_ARBITRUM=
+
+## debug params
+export BLOCK=0x0
+export FROM=0x0
+export TO=0x0
+export VALUE=0x0
+export CALLDATA=0x0
