--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,6 @@
-# Compiler files
 cache/
 out/
 lib/
 deployments/
-temp/
-
-# Ignores development broadcast logs
-/broadcast
-/broadcast/*/31337/
-/broadcast/**/dry-run/
-
-# Docs
-docs/
-
-# Dotenv file
+broadcast/*
 .env
-.env.debug
