--- a/foundry.toml
+++ b/foundry.toml
@@ -1,32 +1,21 @@
 [profile.default]
-auto_detect_solc = false
-block_timestamp = 1_680_220_800 # March 31, 2023 at 00:00 GMT
-bytecode_hash = "none"
-evm_version = "paris"           # See https://www.evmdiff.com/features?name=PUSH0&kind=opcode
-fuzz = { runs = 1_000 }
-gas_reports = ["*"]
-libs = ["lib"]
-optimizer = true
-optimizer_runs = 10_000
-out = "out"
-script = "script"
-solc = "0.8.23"
 src = "src"
+out = "out"
 test = "test"
+libs = ["lib"]
 
-[profile.ci]
-fuzz = { runs = 10_000 }
-verbosity = 4
+solc = "0.8.23"
+evm_version = "paris"
+use_literal_content = true
+
+optimizer = true
+optimizer_runs = 200_000
 
 [fmt]
-bracket_spacing = true
-int_types = "long"
-line_length = 160
-multiline_func_header = "all"
-number_underscore = "thousands"
+tab_width = 2
+line_length = 120
 quote_style = "double"
-tab_width = 4
-wrap_comments = true
+number_underscore = "thousands"
 
 [etherscan]
 # testnet
