--- a/.github/workflows/foundry-storage-check.yml
+++ b/.github/workflows/foundry-storage-check.yml
@@ -34,6 +34,6 @@ jobs:
         with:
           contract: src/Sample.sol:Sample
           # settings below are optional, but allows to check whether the added storage slots are empty on the deployed contract
-          rpcUrl: wss://eth-mainnet.g.alchemy.com/v2/<YOUR_ALCHEMY_KEY> # the RPC url to use to query the deployed contract's storage slots
+          rpcUrl: wss://ethereum.publicnode.com # the RPC url to use to query the deployed contract's storage slots
           address: 0x0000000000000000000000000000000000000000 # the address at which the contract check is deployed
           failOnRemoval: true # fail the CI when removing storage slots (default: false)
